// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wpp-pill renders component 1`] = `
<wpp-pill class="wpp-pill" exportparts="input, pill-wrapper, drag-wrapper, drag-icon, label, inner, active-icon, remove-icon, icon-start, icon-start-wrapper" role="checkbox" tabindex="0" type="single">
  <mock:shadow-root>
    <input class="pill-input" part="input" tabindex="-1" type="checkbox">
    <div class="pill-wrapper single size-m" part="pill-wrapper">
      <div class="icon-start size-m slot-hidden" part="icon-start-wrapper">
        <slot name="icon-start" part="icon-start"></slot>
      </div>
      <div class="label" part="label">
        <slot part="inner"></slot>
      </div>
    </div>
  </mock:shadow-root>
</wpp-pill>
`;

exports[`wpp-pill renders component with label Text and checked state 1`] = `
<wpp-pill aria-checked="" checked="" class="wpp-pill" exportparts="input, pill-wrapper, drag-wrapper, drag-icon, label, inner, active-icon, remove-icon, icon-start, icon-start-wrapper" label="Text" role="checkbox" tabindex="0" type="single">
  <mock:shadow-root>
    <input class="pill-input" part="input" tabindex="-1" type="checkbox">
    <div class="checked pill-wrapper single size-m" part="pill-wrapper">
      <div class="icon-start size-m slot-hidden" part="icon-start-wrapper">
        <slot name="icon-start" part="icon-start"></slot>
      </div>
      <div class="label" part="label">
        Text
      </div>
    </div>
  </mock:shadow-root>
</wpp-pill>
`;

exports[`wpp-pill renders component with type "multiple" and disabled state 1`] = `
<wpp-pill aria-disabled="" aria-hidden="true" class="wpp-pill" disabled="" exportparts="input, pill-wrapper, drag-wrapper, drag-icon, label, inner, active-icon, remove-icon, icon-start, icon-start-wrapper" label="Text" role="checkbox" tabindex="-1" type="multiple">
  <mock:shadow-root>
    <input class="pill-input" disabled="" part="input" tabindex="-1" type="checkbox">
    <div class="disabled multiple pill-wrapper size-m" part="pill-wrapper">
      <div class="icon-start size-m slot-hidden" part="icon-start-wrapper">
        <slot name="icon-start" part="icon-start"></slot>
      </div>
      <div class="label" part="label">
        Text
      </div>
    </div>
  </mock:shadow-root>
</wpp-pill>
`;

exports[`wpp-pill renders display type component 1`] = `
<wpp-pill class="wpp-pill" exportparts="input, pill-wrapper, drag-wrapper, drag-icon, label, inner, active-icon, remove-icon, icon-start, icon-start-wrapper" role="checkbox" type="display">
  <mock:shadow-root>
    <input class="pill-input" part="input" tabindex="-1" type="checkbox">
    <div class="display pill-wrapper size-m" part="pill-wrapper">
      <div class="icon-start size-m slot-hidden" part="icon-start-wrapper">
        <slot name="icon-start" part="icon-start"></slot>
      </div>
      <div class="label" part="label">
        <slot part="inner"></slot>
      </div>
    </div>
  </mock:shadow-root>
</wpp-pill>
`;

exports[`wpp-pill renders draggable type component 1`] = `
<wpp-pill class="wpp-pill" exportparts="input, pill-wrapper, drag-wrapper, drag-icon, label, inner, active-icon, remove-icon, icon-start, icon-start-wrapper" role="checkbox" type="draggable">
  <mock:shadow-root>
    <input class="pill-input" part="input" tabindex="-1" type="checkbox">
    <div class="draggable pill-wrapper size-m" part="pill-wrapper">
      <div class="drag-wrapper icon-start size-m" part="drag-wrapper">
        <wpp-icon-drag class="idle" part="drag-icon" tabindex="0"></wpp-icon-drag>
      </div>
      <div class="label" part="label">
        <slot part="inner"></slot>
      </div>
    </div>
  </mock:shadow-root>
</wpp-pill>
`;
